# git-status-checker

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-gsc-cli.md
docs/superpowers/specs/: 2026-04-10-gsc-cli-design.md
src/gsc/: actions.py  cli.py  display.py  scanner.py
src/gsc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_display.py  test_scanner.py
